plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

if (project.hasProperty("VERSION")) {
    project.version = project.VERSION
} else {
    project.version = '0.0.1'
}

group = 'org.simplesoul'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

allprojects {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://jitpack.io' }
        mavenLocal()
        mavenCentral()
    }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.1'
    implementation 'org.javassist:javassist:3.29.0-GA'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'
    implementation 'com.github.Steppschuh:Java-Markdown-Generator:1.3.2'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.reflections:reflections:0.10.2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add("--enable-preview")
}